--- a/index.html
+++ b/index.html
@@ -45,13 +45,6 @@
             </div>
         </div>
     </div>
-    <script>
-        setTimeout(() => {
-        $('#loading-box').attr('class', 'loaded');
-        $('body').css('overflow-y','scroll');
-        },1000);
-    </script>
-    <script src="https://upcdn.b0.upaiyun.com/libs/jquery/jquery-2.0.2.min.js"></script>
     <!-- 背景图片 -->
     <div class="bg-all">
         <img id="bg" onerror="this.classList.add('error');"></img>
@@ -137,8 +130,28 @@
                         <div class="mainCont selected">
                             <div class="quick-all">
                                 <div class="quick">
-                                    <a href="https://www.xukaiyyds.cn/" target="_blank">
-                                        主页
+                                    <a href="https://www.zhihu.com/" target="_blank">
+                                        知乎
+                                    </a>
+                                </div>
+                                <div class="quick">
+                                    <a href="https://www.douban.com/" target="_blank">
+                                        豆瓣
+                                    </a>
+                                </div>
+                                <div class="quick">
+                                    <a href="https://www.bilibili.com/" target="_blank">
+                                        哔哩哔哩
+                                    </a>
+                                </div>
+                                <div class="quick">
+                                    <a href="https://app.yinxiang.com/" target="_blank">
+                                        印象笔记
+                                    </a>
+                                </div>
+                                <div class="quick">
+                                    <a href="https://note.youdao.com/" target="_blank">
+                                        有道云笔记
                                     </a>
                                 </div>
                             </div>
@@ -196,6 +209,31 @@
                                         文件转换
                                     </a>
                                 </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <!-- 开发 -->
@@ -251,6 +289,31 @@
                                         CodePen
                                     </a>
                                 </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <!-- 设计 -->
@@ -268,22 +331,22 @@
                                 </div>
                                 <div class="quicks">
                                     <a href="https://wallpaperhub.app/" target="_blank">
-                                        wallpaperhub 墙纸
+                                        墙纸壁纸
                                     </a>
                                 </div>
                                 <div class="quicks">
                                     <a href="https://wallhaven.cc/" target="_blank">
-                                        wallhaven 壁纸
+                                        墙纸壁纸库
                                     </a>
                                 </div>
                                 <div class="quicks">
                                     <a href="https://unsplash.com/" target="_blank">
-                                        unsplash 图片
+                                        图片素材
                                     </a>
                                 </div>
                                 <div class="quicks">
                                     <a href="https://pixabay.com/zh/photos/" target="_blank">
-                                        图片素材
+                                        图片素材库
                                     </a>
                                 </div>
                                 <div class="quicks">
@@ -298,12 +361,37 @@
                                 </div>
                                 <div class="quicks">
                                     <a href="https://fonts.google.com/" target="_blank">
-                                        Google Font
+                                        字体资源
                                     </a>
                                 </div>
                                 <div class="quicks">
                                     <a href="https://fonts.adobe.com/" target="_blank">
-                                        Adobe Fonts
+                                        字体资源库
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
                                     </a>
                                 </div>
                             </div>
@@ -358,7 +446,32 @@
                                 </div>
                                 <div class="quicks">
                                     <a href="https://chinese.freecodecamp.org/" target="_blank">
-                                        freeCodeCamp
+                                        freeCode
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
                                     </a>
                                 </div>
                             </div>
@@ -414,6 +527,31 @@
                                 <div class="quicks">
                                     <a href="https://music.163.com/" target="_blank">
                                         网易云音乐
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a target="_blank">
+                                        空
                                     </a>
                                 </div>
                             </div>
