--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <!-- 书签页 -->
                 <div class="mark" style="display: none;">
                     <div class="tab">
-                        <div class="tab-item active">常用</div>
+                        <div class="tab-item">常用</div>
                         <div class="tab-item">工具</div>
                         <div class="tab-item">开发</div>
                         <div class="tab-item">设计</div>
@@ -240,6 +240,11 @@
                         <div class="mainCont">
                             <div class="quick-alls">
                                 <div class="quicks">
+                                    <a href="https://www.zhihu.com/" target="_blank">
+                                        知乎
+                                    </a>
+                                </div>
+                                <div class="quicks">
                                     <a href="https://www.jianshu.com/" target="_blank">
                                         简书
                                     </a>
@@ -247,11 +252,6 @@
                                 <div class="quicks">
                                     <a href="https://juejin.cn/" target="_blank">
                                         掘金
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a href="https://www.nowcoder.com/" target="_blank">
-                                        牛客网
                                     </a>
                                 </div>
                                 <div class="quicks">
@@ -265,13 +265,13 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a href="https://www.csdn.net/" target="_blank">
-                                        CSDN
+                                    <a href="https://www.nowcoder.com/" target="_blank">
+                                        牛客网
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a href="https://vercel.com/" target="_blank">
-                                        Vercel
+                                    <a href="https://www.csdn.net/" target="_blank">
+                                        CSDN
                                     </a>
                                 </div>
                                 <div class="quicks">
@@ -285,33 +285,33 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
+                                    <a href="https://www.gitbook.com/" target="_blank">
+                                        GitBook
+                                    </a>
+                                </div>
+                                <div class="quicks">
                                     <a href="https://codepen.io/" target="_blank">
                                         CodePen
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a target="_blank">
-                                        空
+                                    <a href="https://vercel.com/" target="_blank">
+                                        Vercel
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a target="_blank">
-                                        空
+                                    <a href="https://www.jsdelivr.com/" target="_blank">
+                                        jsDelivr
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a target="_blank">
-                                        空
+                                    <a href="https://leancloud.app/" target="_blank">
+                                        LeanCloud
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a target="_blank">
-                                        空
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a target="_blank">
-                                        空
+                                    <a href="http://www.alloyteam.com/nav/" target="_blank">
+                                        <i class="iconfont icon-tianjia-:before"></i>
                                     </a>
                                 </div>
                             </div>
@@ -327,6 +327,16 @@
                                 <div class="quicks">
                                     <a href="https://sspai.com/" target="_blank">
                                         少数派
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a href="https://www.ypppt.com/" target="_blank">
+                                        优品PPT
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a href="https://www.pptmind.com/" target="_blank">
+                                        PPTMind
                                     </a>
                                 </div>
                                 <div class="quicks">
@@ -380,18 +390,8 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a target="_blank">
-                                        空
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a target="_blank">
-                                        空
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a target="_blank">
-                                        空
+                                    <a href="http://www.foolo.cn/" target="_blank">
+                                        <i class="iconfont icon-tianjia-:before"></i>
                                     </a>
                                 </div>
                             </div>
@@ -470,8 +470,8 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a target="_blank">
-                                        空
+                                    <a href="https://www.xue8nav.com/" target="_blank">
+                                        <i class="iconfont icon-tianjia-:before"></i>
                                     </a>
                                 </div>
                             </div>
@@ -505,13 +505,23 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a href="https://www.douyin.com/" target="_blank">
-                                        抖音
+                                    <a href="https://www.douban.com/" target="_blank">
+                                        豆瓣
                                     </a>
                                 </div>
                                 <div class="quicks">
                                     <a href="https://weibo.com/" target="_blank">
                                         微博
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a href="https://www.douyin.com/" target="_blank">
+                                        抖音
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a href="https://www.bilibili.com/" target="_blank">
+                                        哔哩哔哩
                                     </a>
                                 </div>
                                 <div class="quicks">
@@ -527,16 +537,6 @@
                                 <div class="quicks">
                                     <a href="https://music.163.com/" target="_blank">
                                         网易云音乐
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a target="_blank">
-                                        空
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a target="_blank">
-                                        空
                                     </a>
                                 </div>
                                 <div class="quicks">
