--- a/index.html
+++ b/index.html
@@ -130,28 +130,8 @@
                         <div class="mainCont selected">
                             <div class="quick-all">
                                 <div class="quick">
-                                    <a href="https://www.zhihu.com/" target="_blank">
-                                        知乎
-                                    </a>
-                                </div>
-                                <div class="quick">
-                                    <a href="https://www.douban.com/" target="_blank">
-                                        豆瓣
-                                    </a>
-                                </div>
-                                <div class="quick">
-                                    <a href="https://www.bilibili.com/" target="_blank">
-                                        哔哩哔哩
-                                    </a>
-                                </div>
-                                <div class="quick">
-                                    <a href="https://app.yinxiang.com/" target="_blank">
-                                        印象笔记
-                                    </a>
-                                </div>
-                                <div class="quick">
-                                    <a href="https://note.youdao.com/" target="_blank">
-                                        有道云笔记
+                                    <a href="https://www.xukaiyyds.cn/" target="_blank">
+                                        主页
                                     </a>
                                 </div>
                             </div>
@@ -210,13 +190,13 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a target="_blank">
-                                        空
+                                    <a href="https://app.yinxiang.com/" target="_blank">
+                                        印象笔记
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a target="_blank">
-                                        空
+                                    <a href="https://note.youdao.com/" target="_blank">
+                                        有道云笔记
                                     </a>
                                 </div>
                                 <div class="quicks">
@@ -275,6 +255,11 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
+                                    <a href="https://vercel.com/" target="_blank">
+                                        Vercel
+                                    </a>
+                                </div>
+                                <div class="quicks">
                                     <a href="https://gitee.com/" target="_blank">
                                         Gitee
                                     </a>
@@ -295,23 +280,18 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a href="https://vercel.com/" target="_blank">
-                                        Vercel
+                                    <a target="_blank">
+                                        空
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a href="https://www.jsdelivr.com/" target="_blank">
-                                        jsDelivr
+                                    <a target="_blank">
+                                        空
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a href="https://leancloud.app/" target="_blank">
-                                        LeanCloud
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a href="http://www.alloyteam.com/nav/" target="_blank">
-                                        <i class="iconfont icon-tianjia-:before"></i>
+                                    <a target="_blank">
+                                        空
                                     </a>
                                 </div>
                             </div>
@@ -390,8 +370,8 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a href="http://www.foolo.cn/" target="_blank">
-                                        <i class="iconfont icon-tianjia-:before"></i>
+                                    <a target="_blank">
+                                        空
                                     </a>
                                 </div>
                             </div>
@@ -450,8 +430,13 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a target="_blank">
-                                        空
+                                    <a href="https://www.bilibili.com/v/knowledge/" target="_blank">
+                                        哔哩哔哩
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a href="https://baike.baidu.com/" target="_blank">
+                                        百度百科
                                     </a>
                                 </div>
                                 <div class="quicks">
@@ -467,11 +452,6 @@
                                 <div class="quicks">
                                     <a target="_blank">
                                         空
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a href="https://www.xue8nav.com/" target="_blank">
-                                        <i class="iconfont icon-tianjia-:before"></i>
                                     </a>
                                 </div>
                             </div>
