--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>XKの自定义</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="description" content="凯伊兹的自定义导航,可自定义网址和背景图片,支持数据导入和导出" />
+    <meta name="keywords" content="XK,自定义,XKの自定义,xukaiyyds.cn,nav.xukaiyyds.cn" />
+    <meta name="author" content="XK,xukai" />
     <!-- logo -->
     <link rel="icon" href="favicon.ico">
     <!-- jQuery -->
@@ -92,27 +95,6 @@
                                     <span>百度</span>
                                 </a>
                             </div>
-                            <div class="se-li" data-url="https://cn.bing.com/search" data-name="q"
-                                data-icon="iconfont icon-bing">
-                                <a class="se-li-text">
-                                    <i id="icon-sou-list" class="iconfont icon-bing"></i>
-                                    <span>必应</span>
-                                </a>
-                            </div>
-                            <div class="se-li" data-url="https://www.google.com/search" data-name="q"
-                                data-icon="iconfont icon-google">
-                                <a class="se-li-text">
-                                    <i id="icon-sou-list" class="iconfont icon-google"></i>
-                                    <span>谷歌</span>
-                                </a>
-                            </div>
-                            <div class="se-li" data-url="https://www.sogou.com/web" data-name="query"
-                                data-icon="iconfont icon-bing">
-                                <a class="se-li-text">
-                                    <i id="icon-sou-list" class="iconfont icon-sougousousuo"></i>
-                                    <span>搜狗</span>
-                                </a>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -132,7 +114,7 @@
                             <div class="quick-all">
                                 <div class="quick">
                                     <a href="https://www.xukaiyyds.cn/" target="_blank">
-                                        主页
+                                        XKの主页
                                     </a>
                                 </div>
                             </div>
@@ -166,16 +148,6 @@
                                     </a>
                                 </div>
                                 <div class="quicks">
-                                    <a href="https://www.superbed.cn/" target="_blank">
-                                        聚合图床
-                                    </a>
-                                </div>
-                                <div class="quicks">
-                                    <a href="https://translate.google.cn/" target="_blank">
-                                        谷歌翻译
-                                    </a>
-                                </div>
-                                <div class="quicks">
                                     <a href="https://weibomiaopai.com/" target="_blank">
                                         视频下载
                                     </a>
@@ -188,6 +160,16 @@
                                 <div class="quicks">
                                     <a href="https://cdkm.com/cn/" target="_blank">
                                         文件转换
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a href="https://www.superbed.cn/" target="_blank">
+                                        聚合图床
+                                    </a>
+                                </div>
+                                <div class="quicks">
+                                    <a href="https://translate.google.cn/" target="_blank">
+                                        谷歌翻译
                                     </a>
                                 </div>
                                 <div class="quicks">
