--- a/index.html
+++ b/index.html
@@ -794,6 +794,7 @@
     <script type="text/javascript" src="./js/main.js"></script>
     <script type="text/javascript" src="./js/cursor.js"></script>
     <script type="text/javascript" src="./js/js.cookie.js"></script>
+    <script src="https://myhkw.cn/api/player/1648784819113" id="myhk" key="1648784819113" m="1"></script>
 </body>
 
 </html>
